# flashback-mtgo-replay

./: Cargo.toml  DEVELOPMENT.md  KNOWN_ISSUES.md  PROTOCOL_RESEARCH.md  README.md  example.flashback  opcode-table.tsv
.github/workflows/: build-windows.yml  deploy-pages.yml
docs/: prd-flashback-mtgo-replay-system.md
docs/specs/: 2026-03-18-rust-decoder-design.md
recorder/: FileWriter.cs  FlashbackRecorder.csproj  GameSessionManager.cs  IMtgoClient.cs  MtgoClient.cs  Program.cs  Settings.cs  TrayApp.cs
recorder/Models/: GameEvent.cs  GameSession.cs  ReplayData.cs  ReplayFormat.cs  Snapshot.cs
recorder/Tests/: FileWriterTests.cs  FlashbackRecorder.Tests.csproj  GameSessionManagerTests.cs  MockMtgoClient.cs
schemas/: v3.schema.json
src/: chat.rs  lib.rs  main.rs  scryfall.rs  state.rs  translator.rs
src/capture/: dumper.rs  mod.rs  mtgo.rs  pcap.rs
src/protocol/: decoder.rs  fls.rs  framing.rs  game_messages.rs  game_results.rs  mod.rs  opcodes.rs  raw_analyzer.rs  statebuf.rs
src/replay/: boundary.rs  mod.rs  schema.rs  writer.rs
tests/: golden_pipeline.rs  integration.rs
tests/fixtures/: golden_game3_replay.json  golden_v1_replay.json
tools/: analyze_capture.py
tools/capture-hook/: CaptureHook.csproj  INJECT.md  Patcher.cs  install-hook.ps1  uninstall-hook.ps1
tools/opcode-dump/: .gitignore  Program.cs  opcode-dump.csproj
web/: README.md  package-lock.json  package.json  tsconfig.node.json  tsconfig.tsbuildinfo  vite.config.ts  vitest.config.ts
web/public/: demo.flashback  golden_replay.flashback
web/src/: App.e2e.test.tsx  App.test.tsx  (+1 more)
(+35 files in other folders)
