[package]
name = "flashback"
version = "0.1.0"
edition = "2021"

[dependencies]
pnet = "0.34"
pcap = "1.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"

[dev-dependencies]
tempfile = "3.8"
